syntax = "proto3";
package cheetah.matches.matchmaking.external;
option csharp_namespace = "Cheetah.Matches.Matchmaking";

import public "matches.relay.types.proto";

service Matchmaking {
  /**
    Создать билет на вход в матч для пользователя
   */
  rpc Matchmaking(TicketRequest) returns (TicketResponse);
}

message TicketRequest {
  cheetah.matches.relay.types.UserTemplate user = 1;
  string match_template = 2;
}

message TicketResponse {
  bytes private_key = 1;
  uint32 user_id = 2;
  uint64 room_id = 3;
  string relay_game_host = 4;
  uint32 relay_game_port = 5;
}
